fix: make panel lower to prevent covering figma menus, improve styles

--- a/src/entrypoints/ui/style.css
+++ b/src/entrypoints/ui/style.css
@@ -45,10 +45,19 @@ tempad .tp-ellipsis {
 }
 
 tempad select {
+  appearance: none;
   height: 28px;
   border: 1px solid var(--color-border);
   border-radius: 2px;
-  background-color: var(--color-bg);
+  padding: 0 20px 0 7px;
+  background-color: transparent;
+  background-image: url("data:image/svg+xml,%3Csvg class='svg' xmlns='http://www.w3.org/2000/svg' width='8' height='7' viewBox='0 0 8 7'%3E%3Cpath fill='%230000004d' fill-opacity='1' fill-rule='evenodd' stroke='none' d='m3.646 5.354-3-3 .708-.708L4 4.293l2.646-2.647.708.708-3 3L4 5.707l-.354-.353z'%3E%3C/path%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: center right 8px;
+}
+
+[data-preferred-theme="dark"] tempad select {
+  background-image: url("data:image/svg+xml,%3Csvg class='svg' xmlns='http://www.w3.org/2000/svg' width='8' height='7' viewBox='0 0 8 7'%3E%3Cpath fill='%23ffffff66' fill-opacity='1' fill-rule='evenodd' stroke='none' d='m3.646 5.354-3-3 .708-.708L4 4.293l2.646-2.647.708.708-3 3L4 5.707l-.354-.353z'%3E%3C/path%3E%3C/svg%3E");
 }
 
 tempad select:focus-visible {
@@ -61,12 +70,12 @@ tempad input[type="number"] {
   height: 28px;
   border: 1px solid var(--color-border);
   border-radius: 2px;
-  padding: 0 4px;
+  padding: 0 7px;
   background-color: var(--color-bg);
 }
 
-tempad input[type=number]::-webkit-inner-spin-button,
-tempad input[type=number]::-webkit-outer-spin-button {
+tempad input[type="number"]::-webkit-inner-spin-button,
+tempad input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
